fix label overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     height: 800px;
     width: 100%;
     padding: 10px 15px;
+    margin-bottom: 50px;
 }
 .treemap-wrapper h1{
     margin: 15px auto;
